Add runnable eisop-errorprone example (Task 8)
docs/examples/eisop-errorprone/ is a standalone Gradle project that runs the
Nullness Checker as the eisopcf Error Prone plugin over a demo class with a
nullness bug. It consumes the locally-built Checker Framework jars (the
framework-errorprone artifact is not published yet), so it is runnable against
the current checkout via 'make all', which builds the jars and greps for the
expected [eisopcf] [dereference.of.nullable] diagnostic. Gated on JDK 21+.

Key wiring detail: the errorprone path uses the PLAIN framework-errorprone jar,
not the -all shadow jar (the shadow jar bundles a copy of Error Prone's classes
and breaks the BugChecker service check with 'not a subtype'); the checker -all
shadow jar supplies the checkers.

Also: add .gitignore entries for the example's build artifacts, cross-reference
the example from docs/developer/cf-errorprone.md, and record ADR-0008.
Verified: make all exits 0; project-wide spotlessCheck passes.